--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header class="header-container">
+    <header class="header">
       <div class="container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo link">
@@ -62,8 +62,10 @@
     </header>
     <main>
       <section class="hero">
-        <h1 class="hero-title">Effective Solutions for Your Business</h1>
-        <button class="hero-btn" type="button">Order Service</button>
+        <div class="container">
+          <h1 class="hero-title">Effective Solutions for Your Business</h1>
+          <button class="hero-btn" type="button">Order Service</button>
+        </div>
       </section>
 
       <section class="advantages">
@@ -71,32 +73,40 @@
           <h2 class="section-title visually-hidden">Our advantages</h2>
           <ul class="section-list">
             <li class="section-item list">
-              <h3 class="section-subtitle">Strategy</h3>
-              <p class="section-desc">
-                Our goal is to identify the business problem to walk away with
-                the perfect and creative solution.
-              </p>
+              <div class="anvantages-content">
+                <h3 class="section-subtitle">Strategy</h3>
+                <p class="section-desc">
+                  Our goal is to identify the business problem to walk away with
+                  the perfect and creative solution.
+                </p>
+              </div>
             </li>
             <li class="section-item list">
-              <h3 class="section-subtitle">Punctuality</h3>
-              <p class="section-desc">
-                Bring the key message to the brand's audience for the best price
-                within the shortest possible time.
-              </p>
+              <div class="anvantages-content">
+                <h3 class="section-subtitle">Punctuality</h3>
+                <p class="section-desc">
+                  Bring the key message to the brand's audience for the best
+                  price within the shortest possible time.
+                </p>
+              </div>
             </li>
             <li class="section-item list">
-              <h3 class="section-subtitle">Diligence</h3>
-              <p class="section-desc">
-                Research and confirm brands that present the strongest digital
-                growth opportunities and minimize risk.
-              </p>
+              <div class="anvantages-content">
+                <h3 class="section-subtitle">Diligence</h3>
+                <p class="section-desc">
+                  Research and confirm brands that present the strongest digital
+                  growth opportunities and minimize risk.
+                </p>
+              </div>
             </li>
             <li class="section-item list">
-              <h3 class="section-subtitle">Technologies</h3>
-              <p class="section-desc">
-                Design practice focused on digital experiences. We bring forth a
-                deep passion for problem-solving.
-              </p>
+              <div class="anvantages-content">
+                <h3 class="section-subtitle">Technologies</h3>
+                <p class="section-desc">
+                  Design practice focused on digital experiences. We bring forth
+                  a deep passion for problem-solving.
+                </p>
+              </div>
             </li>
           </ul>
         </div>
@@ -125,23 +135,31 @@
           <ul class="section-list">
             <li class="section-item list">
               <img src="./images/img.jpg" alt="Mark Guerrero" width="264" />
-              <h3 class="section-subtitle">Mark Guerrero</h3>
-              <p class="section-desc">Product Designer</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Mark Guerrero</h3>
+                <p class="section-desc">Product Designer</p>
+              </div>
             </li>
             <li class="section-item list">
               <img src="./images/img2.jpg" alt="Tom Ford" width="264" />
-              <h3 class="section-subtitle">Tom Ford</h3>
-              <p class="section-desc">Frontend Developer</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Tom Ford</h3>
+                <p class="section-desc">Frontend Developer</p>
+              </div>
             </li>
             <li class="section-item list">
               <img src="./images/img3.jpg" alt="Camila Garcia" width="264" />
-              <h3 class="section-subtitle">Camila Garcia</h3>
-              <p class="section-desc">Marketing</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Camila Garcia</h3>
+                <p class="section-desc">Marketing</p>
+              </div>
             </li>
             <li class="section-item list">
               <img src="./images/img4.jpg" alt="Daniel Wilson" width="264" />
-              <h3 class="section-subtitle">Daniel Wilson</h3>
-              <p class="section-desc">UI Designer</p>
+              <div class="team-content">
+                <h3 class="section-subtitle">Daniel Wilson</h3>
+                <p class="section-desc">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
