додає флекс хедеру

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="container">
+      <div class="container header-container">
         <nav class="header-navigation">
           <a href="./index.html" class="logo link">
             <span class="accent">Web</span>Studio</a
@@ -40,28 +40,26 @@
           </ul>
         </nav>
 
-        <address class="header-address container">
-          <ul class="header-list list">
-            <li class="contact-link">
-              <a
-                href="mailto:info@devstudio.com"
-                class="contact-link link"
-                target="_blank"
-                rel="noreferrer noopener nofollow"
-                >info@devstudio.com</a
-              >
-            </li>
-            <li class="contact-link">
-              <a href="tel:+110001111111" class="contact-link link"
-                >+11 (000) 111-11-11</a
-              >
-            </li>
-          </ul>
-        </address>
+        <ul class="list header-container">
+          <li class="contact-link">
+            <a
+              href="mailto:info@devstudio.com"
+              class="contact-link link"
+              target="_blank"
+              rel="noreferrer noopener nofollow"
+              >info@devstudio.com</a
+            >
+          </li>
+          <li class="contact-link">
+            <a href="tel:+110001111111" class="contact-link link"
+              >+11 (000) 111-11-11</a
+            >
+          </li>
+        </ul>
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero hero-container">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
