--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
       </section>
 
-      <section class="advantages">
-        <div class="container">
+      <section class="advantages section">
+        <div class="container advantages-content">
           <h2 class="section-title visually-hidden">Our advantages</h2>
           <ul class="section-list">
             <li class="section-item list">
@@ -111,7 +111,7 @@
       </section>
 
       <section class="work">
-        <div class="container">
+        <div class="container work-container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="working-list list">
             <li class="working-item">
@@ -128,7 +128,7 @@
       </section>
 
       <section class="team">
-        <div class="container">
+        <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="section-list">
             <li class="section-item list">
@@ -164,13 +164,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link">
-        <span class="accent">Web</span>Studio</a
-      >
-      <p class="footer-desc">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-content">
+        <a href="./index.html" class="footer-logo link">
+          <span class="accent">Web</span>Studio</a
+        >
+        <p class="footer-desc">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
