--- a/portfolio.html
+++ b/portfolio.html
@@ -62,23 +62,27 @@
       <section class="portfolio">
         <div class="container">
           <h1 class="visually-hidden">Header</h1>
-          <ul class="portfolio-list list">
-            <li>
-              <button class="portfolio-btn list" type="button">All</button>
-            </li>
-            <li>
-              <button class="portfolio-btn list" type="button">Web Site</button>
-            </li>
-            <li>
-              <button class="portfolio-btn list" type="button">App</button>
-            </li>
-            <li>
-              <button class="portfolio-btn list" type="button">Design</button>
-            </li>
-            <li>
-              <button class="portfolio-btn" type="button">Marketing</button>
-            </li>
-          </ul>
+          <div class="button-list">
+            <ul class="portfolio-list list">
+              <li class="portfolio-item">
+                <button class="portfolio-btn list" type="button">All</button>
+              </li>
+              <li class="portfolio-item">
+                <button class="portfolio-btn list" type="button">
+                  Web Site
+                </button>
+              </li>
+              <li class="portfolio-item">
+                <button class="portfolio-btn list" type="button">App</button>
+              </li>
+              <li class="portfolio-item">
+                <button class="portfolio-btn list" type="button">Design</button>
+              </li>
+              <li class="portfolio-item">
+                <button class="portfolio-btn" type="button">Marketing</button>
+              </li>
+            </ul>
+          </div>
           <ul class="visually-list">
             <li class="visually-item list">
               <img
@@ -166,13 +170,15 @@
       </section>
     </main>
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link">
-        <span class="accent">Web</span>Studio</a
-      >
-      <p class="footer-desc">
-        Increase the flow of customers and sales for your business with digital
-        marketing & growth solutions.
-      </p>
+      <div class="container footer-content">
+        <a href="./index.html" class="footer-logo link">
+          <span class="accent">Web</span>Studio</a
+        >
+        <p class="footer-desc">
+          Increase the flow of customers and sales for your business with
+          digital marketing & growth solutions.
+        </p>
+      </div>
     </footer>
   </body>
 </html>
