додає стилі потрфоліо

--- a/portfolio.html
+++ b/portfolio.html
@@ -60,7 +60,7 @@
     </header>
     <main>
       <section class="portfolio">
-        <div class="container">
+        <div class="container portfolio-container">
           <h1 class="visually-hidden">Header</h1>
           <div class="button-list">
             <ul class="portfolio-list list">
@@ -90,17 +90,21 @@
                 alt="Application"
                 width="360"
               />
-              <h3 class="section-subtitle">Banking App Interface Concept</h3>
-              <p class="section-desc">App</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Banking App Interface Concept</h3>
+                <p class="section-desc">App</p>
+              </div>
             </li>
-            <li class="section-item list">
+            <li class="visually-item list">
               <img
                 src="./images/portfolio/img2.jpg"
                 alt="Cashless Payment"
                 width="360"
               />
-              <h3 class="section-subtitle">Cashless Payment</h3>
-              <p class="section-desc">Marketing</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Cashless Payment</h3>
+                <p class="section-desc">Marketing</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -108,8 +112,10 @@
                 alt="Meditaion App"
                 width="360"
               />
-              <h3 class="section-subtitle">Meditaion App</h3>
-              <p class="section-desc">App</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Meditaion App</h3>
+                <p class="section-desc">App</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -117,8 +123,10 @@
                 alt="Taxi Service"
                 width="360"
               />
-              <h3 class="section-subtitle">Taxi Service</h3>
-              <p class="section-desc">Marketing</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Taxi Service</h3>
+                <p class="section-desc">Marketing</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -126,8 +134,10 @@
                 alt="Screen Illustrations"
                 width="360"
               />
-              <h3 class="section-subtitle">Screen Illustrations</h3>
-              <p class="section-desc">Design</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Screen Illustrations</h3>
+                <p class="section-desc">Design</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -135,8 +145,10 @@
                 alt="Online Courses"
                 width="360"
               />
-              <h3 class="section-subtitle">Online Courses</h3>
-              <p class="section-desc">Marketing</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Online Courses</h3>
+                <p class="section-desc">Marketing</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -144,8 +156,10 @@
                 alt="Instagram Stories Concept"
                 width="360"
               />
-              <h3 class="section-subtitle">Instagram Stories Concept</h3>
-              <p class="section-desc">Design</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Instagram Stories Concept</h3>
+                <p class="section-desc">Design</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -153,8 +167,10 @@
                 alt="Organic Food"
                 width="360"
               />
-              <h3 class="section-subtitle">Organic Food</h3>
-              <p class="section-desc">Web Site</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Organic Food</h3>
+                <p class="section-desc">Web Site</p>
+              </div>
             </li>
             <li class="visually-item list">
               <img
@@ -162,8 +178,10 @@
                 alt="Fresh Coffee"
                 width="360"
               />
-              <h3 class="section-subtitle">Fresh Coffee</h3>
-              <p class="section-desc">Web Site</p>
+              <div class="gallery-content">
+                <h3 class="section-subtitle">Fresh Coffee</h3>
+                <p class="section-desc">Web Site</p>
+              </div>
             </li>
           </ul>
         </div>
