--- a/index.html
+++ b/index.html
@@ -71,40 +71,32 @@
           <h2 class="section-title visually-hidden">Our advantages</h2>
           <ul class="section-list">
             <li class="section-item list">
-              <div class="anvantages-content">
-                <h3 class="section-subtitle">Strategy</h3>
-                <p class="section-desc">
-                  Our goal is to identify the business problem to walk away with
-                  the perfect and creative solution.
-                </p>
-              </div>
+              <h3 class="section-subtitle">Strategy</h3>
+              <p class="section-desc">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </p>
             </li>
             <li class="section-item list">
-              <div class="anvantages-content">
-                <h3 class="section-subtitle">Punctuality</h3>
-                <p class="section-desc">
-                  Bring the key message to the brand's audience for the best
-                  price within the shortest possible time.
-                </p>
-              </div>
+              <h3 class="section-subtitle">Punctuality</h3>
+              <p class="section-desc">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </p>
             </li>
             <li class="section-item list">
-              <div class="anvantages-content">
-                <h3 class="section-subtitle">Diligence</h3>
-                <p class="section-desc">
-                  Research and confirm brands that present the strongest digital
-                  growth opportunities and minimize risk.
-                </p>
-              </div>
+              <h3 class="section-subtitle">Diligence</h3>
+              <p class="section-desc">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </p>
             </li>
             <li class="section-item list">
-              <div class="anvantages-content">
-                <h3 class="section-subtitle">Technologies</h3>
-                <p class="section-desc">
-                  Design practice focused on digital experiences. We bring forth
-                  a deep passion for problem-solving.
-                </p>
-              </div>
+              <h3 class="section-subtitle">Technologies</h3>
+              <p class="section-desc">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </p>
             </li>
           </ul>
         </div>
