додає лінію в хедері

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </nav>
 
-        <ul class="list header-container">
+        <ul class="list header-list">
           <li class="contact-link">
             <a
               href="mailto:info@devstudio.com"
