--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           </ul>
         </nav>
 
-        <ul class="list header-list">
+        <ul class="address list header-list">
           <li class="contact-link">
             <a
               href="mailto:info@devstudio.com"
@@ -59,7 +59,7 @@
       </div>
     </header>
     <main>
-      <section class="hero">
+      <section class="hero section">
         <div class="container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" type="button">Order Service</button>
@@ -102,7 +102,7 @@
         </div>
       </section>
 
-      <section class="work">
+      <section class="work section">
         <div class="container work-container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="working-list list">
@@ -119,7 +119,7 @@
         </div>
       </section>
 
-      <section class="team">
+      <section class="team section">
         <div class="container team-container">
           <h2 class="section-title">Our Team</h2>
           <ul class="section-list">
