--- a/portfolio.html
+++ b/portfolio.html
@@ -59,30 +59,26 @@
       </div>
     </header>
     <main>
-      <section class="portfolio">
+      <section class="portfolio section">
         <div class="container portfolio-container">
           <h1 class="visually-hidden">Header</h1>
-          <div class="button-list">
-            <ul class="portfolio-list list">
-              <li class="portfolio-item">
-                <button class="portfolio-btn list" type="button">All</button>
-              </li>
-              <li class="portfolio-item">
-                <button class="portfolio-btn list" type="button">
-                  Web Site
-                </button>
-              </li>
-              <li class="portfolio-item">
-                <button class="portfolio-btn list" type="button">App</button>
-              </li>
-              <li class="portfolio-item">
-                <button class="portfolio-btn list" type="button">Design</button>
-              </li>
-              <li class="portfolio-item">
-                <button class="portfolio-btn" type="button">Marketing</button>
-              </li>
-            </ul>
-          </div>
+          <ul class="portfolio-list list">
+            <li class="portfolio-item">
+              <button class="portfolio-btn list" type="button">All</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portfolio-btn list" type="button">Web Site</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portfolio-btn list" type="button">App</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portfolio-btn list" type="button">Design</button>
+            </li>
+            <li class="portfolio-item">
+              <button class="portfolio-btn" type="button">Marketing</button>
+            </li>
+          </ul>
           <ul class="visually-list">
             <li class="visually-item list">
               <img
